@@ -19,8 +19,8 @@ package com.android.server.ranging.session;
 import static android.ranging.oob.OobInitiatorRangingConfig.RANGING_MODE_AUTO;
 import static android.ranging.oob.OobInitiatorRangingConfig.RANGING_MODE_HIGH_ACCURACY;
 
-import static com.android.server.ranging.oob.OobUtils.fromOobMotion;
 import static com.android.server.ranging.common.RangingUtils.macAddressToString;
+import static com.android.server.ranging.oob.OobUtils.fromOobMotion;
 
 import android.bluetooth.BluetoothDevice;
 import android.content.AttributionSource;
@@ -37,7 +37,6 @@ import android.ranging.oob.OobInitiatorRangingConfig;
 import android.util.Log;
 
 import androidx.annotation.NonNull;
-import androidx.annotation.Nullable;
 
 import com.android.server.ranging.RangingInjector;
 import com.android.server.ranging.RangingServiceManager;
@@ -46,6 +45,7 @@ import com.android.server.ranging.blerssi.BleRssiConfigSelector;
 import com.android.server.ranging.common.RangingUtils.InternalReason;
 import com.android.server.ranging.cs.CsConfigSelector;
 import com.android.server.ranging.engine.RangingEngine;
+import com.android.server.ranging.engine.RangingEngine.EngineListener;
 import com.android.server.ranging.engine.StaticRangingEngine;
 import com.android.server.ranging.engine.UwbBreakBeforeMakeEngine;
 import com.android.server.ranging.engine.UwbMakeBeforeBreakEngine;
@@ -56,7 +56,6 @@ import com.android.server.ranging.oob.OobInitiatorProtocol.PeerCapabilities;
 import com.android.server.ranging.oob.packets.BleCsCapabilities;
 import com.android.server.ranging.oob.packets.Capabilities;
 import com.android.server.ranging.oob.packets.Configuration;
-import com.android.server.ranging.oob.packets.DeviceType;
 import com.android.server.ranging.oob.packets.MotionIndicator;
 import com.android.server.ranging.oob.packets.MotionNotification;
 import com.android.server.ranging.oob.packets.OobMessage;
@@ -66,6 +65,7 @@ import com.android.server.ranging.rtt.RttConfigSelector;
 import com.android.server.ranging.rtt.RttStationConfigSelector;
 import com.android.server.ranging.session.ConfigurationManager.ConfigSelectionException;
 import com.android.server.ranging.session.ConfigurationManager.TechnologyConfig;
+import com.android.server.ranging.session.Peer.PeerInfo;
 import com.android.server.ranging.uwb.UwbConfigSelector;
 import com.android.server.ranging.wifipd.WifiPdConfigSelector;
 
@@ -76,6 +76,7 @@ import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.google.common.util.concurrent.SettableFuture;
 
+import java.util.Collection;
 import java.util.EnumMap;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -96,23 +97,24 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
     private static final long MESSAGE_TIMEOUT_MS = 4000;
 
     private final ScheduledExecutorService mOobExecutor;
-    private final ConcurrentHashMap<RangingDevice, Peer> mPeers;
+    private final ConcurrentHashMap<RangingDevice, OobPeer> mPeers;
 
     private OobInitiatorRangingConfig mConfig;
     private ConfigurationManager mConfigManager;
     private OobInitiatorProtocol mProtocol;
 
-    private class Peer implements AutoCloseable, RangingEngine.EngineListener {
+    private class OobPeer implements AutoCloseable, EngineListener {
         final RangingDevice mDevice;
         final OobConnection mConnection;
         final SettableFuture<Void> mOobCompleted;
         /**
          * <b>Invariant</b>: Non-null after
-         * {@link Peer#createRangingEngine(TechnologyTransitioning, Map)}
+         * {@link OobPeer#createRangingEngine(PeerInfo, Map)}
          */
         RangingEngine mEngine;
+        PeerInfo mInfo;
 
-        Peer(OobConnection connection) {
+        OobPeer(OobConnection connection) {
             mDevice = connection.getHandle().getRangingDevice();
             mConnection = connection;
             mOobCompleted = SettableFuture.create();
@@ -138,13 +140,13 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
         }
 
         public void createRangingEngine(
-                @Nullable TechnologyTransitioning transitioningSupport,
+                @NonNull PeerInfo info,
                 Map<Technology, Capabilities> capabilities
         ) {
-
+            mInfo = info;
             if (RangingInjector.isFlagEnabled("rangingTechnologyTransitioning")
                     && mConfig.getRangingMode() == RANGING_MODE_AUTO
-                    && transitioningSupport != null
+                    && info.getSupportedTransitioning() != null
                     && capabilities.size() >= 2 && capabilities.containsKey(Technology.Uwb)
             ) {
                 RangingTechnology alternate = mInjector.getTechnologyRanking().stream()
@@ -154,7 +156,7 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
                         .findFirst()
                         .get();
 
-                mEngine = switch (transitioningSupport) {
+                mEngine = switch (info.getSupportedTransitioning()) {
                     case TechnologyTransitioning.MakeBeforeBreak unused -> {
                         Log.i(TAG, "Using make-before-break transitioning UWB <-> " + alternate);
                         yield new UwbMakeBeforeBreakEngine(
@@ -201,13 +203,19 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
         }
 
         @Override
-        public synchronized void stopTechnologies(Set<RangingTechnology> technologies) {
+        public synchronized void stopTechnologies(
+                Set<RangingTechnology> technologies, @InternalReason int reason
+        ) {
             var unused = sendStopRangingMessage(this, technologies)
                     .transform(unused1 -> {
-                        OobInitiatorRangingSession.super.stopTechnologies(
-                                technologies, InternalReason.ENGINE_REQUEST);
+                        OobInitiatorRangingSession.super.stopTechnologies(technologies, reason);
                         return null;
                     }, mOobExecutor);
+        }
+
+        @Override
+        public synchronized void stopSession() {
+            stop(Set.of(this), InternalReason.ENGINE_REQUEST);
         }
 
         @Override
@@ -245,7 +253,7 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
             OobHandle handle = new OobHandle(mSessionHandle, deviceHandle.getRangingDevice());
             mPeers.put(
                     deviceHandle.getRangingDevice(),
-                    new Peer(mInjector.getOobController().createConnection(handle)));
+                    new OobPeer(mInjector.getOobController().createConnection(handle)));
         }
 
         mConfig = config;
@@ -264,7 +272,14 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
                         // Start engine before calling session start to ensure the necessary
                         // initialization completed to interact with technology changes.
                         mPeers.values().forEach(peer -> peer.mEngine.start(localConfigs));
-                        OobInitiatorRangingSession.super.start(localConfigs);
+                        if (mPeers.values().stream().anyMatch(
+                                peer -> peer.mEngine instanceof UwbMakeBeforeBreakEngine)
+                        ) {
+                            OobInitiatorRangingSession.super
+                                    .startAndKeepAliveUntilClosedExplicitly(localConfigs);
+                        } else {
+                            OobInitiatorRangingSession.super.start(localConfigs);
+                        }
                     }
 
                     @Override
@@ -286,21 +301,23 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
 
     @Override
     public void stop() {
-        Log.v(TAG, "Sending stop requests to " + mPeers.keySet());
+        stop(mPeers.values(), InternalReason.LOCAL_REQUEST);
+    }
+
+    private void stop(Collection<OobPeer> peers, @InternalReason int reason) {
+        Log.v(TAG, "Sending stop requests to " + peers.stream().map(p -> p.mDevice).toList());
 
         // Only send stop request to peers that responded to our capabilities request.
-        List<FluentFuture<Void>> pendingSends = mPeers.keySet().stream()
-                .map(peer -> sendStopRangingMessage(
-                        mPeers.get(peer),
-                        getTechnologiesUsedByPeer(peer)))
-                .toList();
+        List<FluentFuture<Void>> pendingSends = peers.stream()
+                .map(peer -> sendStopRangingMessage(peer, getTechnologiesUsedByPeer(peer.mDevice)))
+                .collect(Collectors.toList());
         var unused = Futures.whenAllComplete(pendingSends)
-                .run(OobInitiatorRangingSession.super::stop, mOobExecutor);
+                .run(() -> OobInitiatorRangingSession.super.stop(reason), mOobExecutor);
     }
 
     @Override
-    public DeviceType getPeerType(RangingDevice peer) {
-        return mProtocol.getPeerType(peer);
+    public PeerInfo getPeerInfo(RangingDevice peer) {
+        return mPeers.get(peer).mInfo;
     }
 
     private FluentFuture<Map<RangingDevice, byte[]>> sendCapabilityRequest() {
@@ -330,19 +347,18 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
         for (RangingDevice peer : responses.keySet()) {
             PeerCapabilities capabilities =
                     mProtocol.getCapabilitiesFromResponse(peer, responses.get(peer));
+            PeerInfo info = capabilities.info();
             capabilities = filterPeerBtCapabilities(peer, capabilities);
-            mConfigManager
-                    .addPeerCapabilities(peer, capabilities.byTechnology(),
-                            mProtocol.getPeerType(peer));
-            mPeers.get(peer)
-                    .createRangingEngine(capabilities.transitioning(), capabilities.byTechnology());
+            mConfigManager.addPeerCapabilities(
+                    peer, capabilities.byTechnology(), info.getDeviceType());
+            mPeers.get(peer).createRangingEngine(info, capabilities.byTechnology());
         }
 
         Map<RangingTechnology, Set<RangingDevice>> peersByTechnology =
                 new EnumMap<>(RangingTechnology.class);
         Map<RangingDevice, FluentFuture<Void>> pendingSends = new HashMap<>(mPeers.size());
         for (RangingDevice peerDevice : mPeers.keySet()) {
-            Peer peer = mPeers.get(peerDevice);
+            OobPeer peer = mPeers.get(peerDevice);
             Set<RangingTechnology> starting = peer.mEngine.getTechnologiesToStart();
 
             OobMessage request = mProtocol.getConfigurationRequest(
@@ -399,11 +415,11 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
             // If BleCs is present, remove BleRssi
             filteredCapabilities.remove(Technology.BleRssi);
         }
-        return new PeerCapabilities(capabilities.transitioning(), filteredCapabilities);
+        return new PeerCapabilities(capabilities.info(), filteredCapabilities);
     }
 
     private FluentFuture<Void> sendStopRangingMessage(
-            Peer peer, Set<RangingTechnology> technologies
+            OobPeer peer, Set<RangingTechnology> technologies
     ) {
         FluentFuture<Void> pendingSend = FluentFuture.from(peer.mOobCompleted)
                 .transformAsync(unused -> {
@@ -489,7 +505,7 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
             @NonNull RangingTechnology technology, @NonNull Set<RangingDevice> peerDevices
     ) {
         peerDevices.forEach(peerDevice -> {
-            Peer peer = mPeers.get(peerDevice);
+            OobPeer peer = mPeers.get(peerDevice);
             if (peer != null) {
                 peer.mEngine.onTechnologyStarted(technology);
             }
@@ -503,7 +519,7 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
             @InternalReason int reason
     ) {
         peerDevices.forEach(peerDevice -> {
-            Peer peer = mPeers.get(peerDevice);
+            OobPeer peer = mPeers.get(peerDevice);
             if (peer != null) {
                 peer.mEngine.onTechnologyStopped(technology, reason);
             }
@@ -514,7 +530,7 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
     @Override
     protected void onResults(@NonNull RangingDevice peerDevice, @NonNull RangingData data) {
         synchronized (mPeers) {
-            Peer peer = mPeers.get(peerDevice);
+            OobPeer peer = mPeers.get(peerDevice);
             if (peer != null) {
                 peer.mEngine.onData(data);
             }
@@ -530,7 +546,7 @@ public class OobInitiatorRangingSession extends BaseRangingSession implements Ra
 
     @Override
     public void close() {
-        mPeers.values().forEach(Peer::close);
+        mPeers.values().forEach(OobPeer::close);
         mPeers.clear();
     }
 }
